@@ -2543,8 +2543,10 @@ sub compile_xs {
 sub split_like_shell {
   my ($self, $string) = @_;
   
-  return () unless defined($string) && length($string);
+  return () unless defined($string);
   return @$string if UNIVERSAL::isa($string, 'ARRAY');
+  $string =~ s/^\s+|\s+$//g;
+  return () unless length($string);
   
   return Text::ParseWords::shellwords($string);
 }
